--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
-    font-family: sans-serif;
+    margin:20;
+    font-family: "Helvetica Neue", sans-serif;
     background: #1DB954
 }
